# thesis_light_switch

./: CMakeLists.txt  prj.conf
include/: provisioner.h
src/: main.c  model_handler.c
